<resources>
    <string name="app_name">Rincón Crochetito</string>
    <string name="mi_google_maps_api_key">AIzaSyApCmJ4aftMK1ekNRZOzflwoajQpEYsJZc</string>
    <string name="op_inicio_a">Inicio</string>
    <string name="op_productos_a">Productos</string>
    <string name="op_usuarios_a">Usuarios</string>
    <string name="op_pagos_a">Pagos y Órdenes</string>
    <string name="op_cerrar_sesion_a">Cerrar Sesión</string>
    <string name="op_categorias_a">Categorias</string>
    <string name="op_mis_productos_a">Mis productos</string>
    <string name="op_mis_ordenes_a">Órdenes</string>
    <string name="op_mi_tienda_a">Mi tienda</string>
    <string name="op_inicio_c">Inicio</string>
    <string name="op_tienda_c">Tienda</string>
    <string name="op_ordenes_c">Mis Órdenes</string>
    <string name="op_carrito_c">Mi Carrito</string>
    <string name="op_perfil_c">Mi Perfil</string>
    <string name="op_cerrar_sesion_c">Cerrar Sesión</string>
    <string name="btn_crear_producto">Crear Producto</string>
    <string name="btn_editar_producto">Editar</string>
    <string name="btn_eliminar_producto">Eliminar</string>
    <string name="hint_nombre_producto">Nombre del Producto</string>
    <string name="hint_descripcion_producto">Descripción</string>
    <string name="hint_precio_producto">Precio</string>
    <string name="hint_stock_producto">Stock</string>
    <string name="btn_subir_imagenes">Subir Imágenes</string>
    <string name="btn_bloquear_usuario">Bloquear</string>
    <string name="btn_desbloquear_usuario">Desbloquear</string>
    <string name="btn_aceptar_pago">Aceptar Pago</string>
    <string name="btn_rechazar_pago">Rechazar Pago</string>
    <string name="btn_enviar_producto">Marcar como Enviado</string>
    <string name="label_estado_pago">Estado de Pago:</string>
    <string name="label_estado_envio">Estado de Envío:</string>
    <string name="txt_bienvenida">Bienvenido(a)</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="txtRegistroA">Registro de Administrador</string>
    <string name="etNombresA">Nombres</string>
    <string name="etEmailA">Email</string>
    <string name="etPasswordA">Contraseña</string>
    <string name="etCPasswordA">Confirmar Contraseña</string>
    <string name="btnRegistrarA">Registrarme</string>
    <string name="txtLoginA">Login de Administrador</string>
    <string name="btnLoginA">Ingresar</string>
    <string name="txtnoCuenta">¿No tienes una cuenta?</string>
    <string name="tvRegistrarA">Registrarme</string>
    <string name="tipoAdministrador">Administrador</string>
    <string name="tipoCliente">Cliente</string>
    <string name="op_inicio_v">Inicio</string>
    <string name="op_mi_tienda_v">Panel de administración</string>
    <string name="op_categorias_v">Categorías</string>
    <string name="op_productos_v">Productos</string>
    <string name="op_resenia_v">Reseñas</string>
    <string name="op_cerrar_sesion_v">Cerrar sesión</string>
    <string name="op_mi_perfil_c">Mi Perfil</string>
    <string name="op_mis_productos_v">Mis productos</string>
    <string name="op_mis_ordenes_v">Órdenes</string>
    <string name="op_favoritos_c">Favoritos</string>
    <string name="op_mis_ordenes_c">Mis órdenes</string>
    <string name="txtRegistroV">Registro de administrador</string>
    <string name="etNombresV">Nombres completos</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Contraseña</string>
    <string name="etCPassword">Confirmar contraseña</string>
    <string name="btnRegistrarV">Registrarme</string>
    <string name="txtRegistroC">Registro de cliente</string>
    <string name="etNombresC">Nombres completos</string>
    <string name="btnRegistrarC">Registrarme</string>
    <string name="txtLoginV">Login de administrador</string>
    <string name="btnLoginV">Ingresar</string>
    <string name="txtNoCuenta">¿No tienes una cuenta?</string>
    <string name="tvRegistrarV">Registrarme</string>
    <string name="txtLoginC">Login de cliente</string>
    <string name="btnLoginC">Ingresar</string>
    <string name="tvRegistrarC">Registrarme</string>
    <string name="tvRecuperarPass">Recuperar contraseña</string>
    <string name="txtRecuperarPass">Recuperar contraseña</string>
    <string name="txtInstrucciones">Ingrese su correo electrónico para enviarle las instrucciones de recuperación.</string>
    <string name="btnEnviarInstrucciones">Enviar</string>
    <string name="txtActualizarPass">Actualizar contraseña</string>
    <string name="txtInstruccionesP">Su nueva contraseña debe ser diferente a la actual.</string>
    <string name="etPasswordActual">Contraseña actual</string>
    <string name="etPasswordNueva">Contraseña nueva</string>
    <string name="etPasswordNuevaR">Repita nueva contraseña</string>
    <string name="btnActualizarPassword">Actualizar</string>
    <string name="txtAgregarProductos">Agregar productos</string>
    <string name="etNombresP">Nombre del producto</string>
    <string name="etDescripcionP">Descripción</string>
    <string name="Categoria">Categoría</string>
    <string name="etPrecioP">Precio</string>
    <string name="txtDescuento">Descuento</string>
    <string name="etPorcentajeDescuentoP">Ingrese porcentaje. Ejm. 20, 50 , 60</string>
    <string name="etPrecioConDescuentoP"></string>
    <string name="etNotaDescuentoP">Ejm: 10% Desc.</string>
    <string name="btnCalcularPrecioDesc">Calcular</string>
    <string name="precioConDescuentoPTXT">Precio con descuento apli.</string>
    <string name="btnAgregarProducto">Agregar producto</string>
    <string name="etCategoria">Ingrese categoría</string>
    <string name="btnAgregarCat">Agregar categoría</string>
    <string name="item_nombre_c_v">Nombre de categoría</string>
    <string name="item_nombre_c_c">Nombre de categoría</string>
    <string name="item_ver_productos">Ver productos</string>
    <string name="item_nombre_p">Nombre del producto</string>
    <string name="item_categoria_p">Categoría</string>
    <string name="item_nota_p">50% OFF</string>
    <string name="item_precio_p">00</string>
    <string name="item_precio_p_desc">00</string>
    <string name="item_agregar_carrito_p">Añadir al carrito</string>
    <string name="txtProductoCat">Producto-categoría</string>
    <string name="etBuscarProducto">Buscar producto</string>
    <string name="txtLoginTelC">Login con teléfono</string>
    <string name="txtLoginMensaje">Necesitamos que ingrese su número telefónico para continuar</string>
    <string name="etTelefonoC">Teléfono</string>
    <string name="btnEnviarCodigo">Enviar código OTP</string>
    <string name="etCodVer">Código</string>
    <string name="btnVerificarCod">Verificar código</string>
    <string name="tvReenviarCod">¿No llegó el código? Reenviar</string>
    <string name="txtDetalleProducto">Detalle de la orden</string>
    <string name="tvPromCal">0.0/5</string>
    <string name="tvTotalCal">(0)</string>
    <string name="tvDejarCalificacion">Escribir un comentario</string>
    <string name="nombrePD">Nombre del producto</string>
    <string name="descripcionPDTXT">Información general:</string>
    <string name="descripcionPD">Descripción</string>
    <string name="precioPD">00</string>
    <string name="precioDescPD">00</string>
    <string name="notaDescPD">50% OFF</string>
    <string name="imagenContadorTv">1/5</string>
    <string name="nombrePCar">Nombre del producto</string>
    <string name="descripcionPCar">Descripción</string>
    <string name="notaDescPCar">10% OFF</string>
    <string name="precioOriginalPCar">00</string>
    <string name="precioDescPCar">00</string>
    <string name="cantidadPCar">1</string>
    <string name="precioFinalPCar">00</string>
    <string name="btnAgregarCarrito">Agregar al carrito</string>
    <string name="cerrarZoom">Cerrar</string>
    <string name="sumaProductos">Suma productos</string>
    <string name="bienvenidaTXT">Bienvenido(a)</string>
    <string name="direccionTXT">Mi dirección</string>
    <string name="txtCategorias">Nuestras categorías</string>
    <string name="txtMiPerfil">Mi perfil</string>
    <string name="nombresCPerfil">Nombres completos</string>
    <string name="emailCPerfil">Email</string>
    <string name="dniCPerfil">RUT</string>
    <string name="telefonoCPerfil">Teléfono</string>
    <string name="ubicacion">Ubicación</string>
    <string name="fechaRegistroCPerfil">Fecha de registro</string>
    <string name="proveedorCPerfil">Proveedor</string>
    <string name="btnGuardarInfoC">Guardar</string>
    <string name="btnActualizarContraseña">Cambiar contraseña</string>
    <string name="txtSeleccionarUbicacion">Seleccione una ubicación</string>
    <string name="Btn_listo">Confirmar</string>
    <string name="btnCrearOrden">Confirmar orden</string>
    <string name="idOrdenItem">Id de la orden</string>
    <string name="fechaOrdenItem">00/00/0000</string>
    <string name="estadoOrdenItem">Estado</string>
    <string name="costoOrdenItem">00</string>
    <string name="tvidOrdenD">Id de la orden: </string>
    <string name="idOrdenD"> -- </string>
    <string name="tvfechaOrdenD">Fecha: </string>
    <string name="fechaOrdenD"> -- </string>
    <string name="tvestadoOrdenD">Estado: </string>
    <string name="estadoOrdenD"> -- </string>
    <string name="tvcantidadOrdenD">Cantidad de productos: </string>
    <string name="cantidadOrdenD"> -- </string>
    <string name="tvcostoOrdenD">Costo: </string>
    <string name="costoOrdenD"> -- </string>
    <string name="tvdireccionOrdenD">Dirección: </string>
    <string name="direccionOrdenD"> -- </string>
    <string name="txtProductosOrdenados">Productos ordenados</string>
    <string name="itemNombreP">Nombre del producto</string>
    <string name="itemPrecioP">Precio</string>
    <string name="itemCantidadP">Cantidad</string>
    <string name="itemPrecioFinalP">Precio total</string>
    <string name="btnContinuarPago">Continuar</string>
    <string name="etBuscarOrdenId">Buscar una orden</string>
    <string name="tvInfoCliente">Información de cliente</string>
    <string name="txtNombresC">Nombres: </string>
    <string name="tvNombresC"> </string>
    <string name="txtDniC">DNI: </string>
    <string name="tvDniC"> </string>
    <string name="txtTelC">Teléfono: </string>
    <string name="tvTelC"> </string>
    <string name="txtDireccionC">Dirección: </string>
    <string name="tvDireccionC"> </string>
    <string name="btnLlamar">Llamar</string>
    <string name="btnSms">Sms</string>
    <string name="verInfoCliente">Información del cliente</string>
    <string name="txtActNomCat">Actualizar nombre cat.</string>
    <string name="etNuevoNomCat">Nombre de cat.</string>
    <string name="btnActualizarNomCat">Actualizar</string>
    <string name="btnAnterior">Anterior</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="txtCalificacion">Calificar producto</string>
    <string name="txtcalificar">¿Cómo calificarías este producto?</string>
    <string name="tvNombreP">Funko Pop Spider-Man</string>
    <string name="txtopinion">¿Qué te gustaría decir acerca de este producto?</string>
    <string name="etOpinion">Comparte tu experiencia</string>
    <string name="tvNombreUsuarioCal">Nombre de usuario</string>
    <string name="tvReseniaCal">Reseña</string>
    <string name="txtMostrarCal">Calificaciones</string>
    <string name="txtEstados">Estados de órdenes</string>
    <string name="tvEstado1">Solicitud recibida</string>
    <string name="tvEstado2">Pago pendiente</string>
    <string name="tvEstado3">En preparación</string>
    <string name="tvEstado4">Entregado</string>
    <string name="tvEstado5">Cancelado</string>
    <string name="txtGanancias">Ganancias</string>
    <string name="tvGanancias">0 CLP</string>
    <string name="txtPerdidas">Pérdidas</string>
    <string name="tvPerdidas">0 CLP</string>
</resources>