<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    tools:context=".Administrador.LoginActivityAdmin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/txtLoginA"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <ImageView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/login_admin"
            android:layout_width="80dp"
            android:layout_height="80dp">
        </ImageView>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <EditText
                android:id="@+id/etEmailA"
                android:hint="@string/etEmailA"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/etPasswordA"
                android:hint="@string/etPasswordA"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Iniciar Sesión -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginA"
            android:text="@string/btnLoginA"
            app:cornerRadius="8dp"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

        <TextView
            android:text="@string/txtnoCuenta"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <!--Nuevo Registro -->
        <TextView
            android:id="@+id/tvRegistrarA"
            android:text="@string/tvRegistrarA"
            android:textStyle="bold"
            android:textColor="@color/morado_oscuro"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>