<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    tools:context=".Administrador.RegistroAdminActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/txtRegistroA"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <ImageView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/registro_admin"
            android:layout_width="80dp"
            android:layout_height="80dp">
        </ImageView>

        <!--Nombres-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNombresA"
                android:hint="@string/etNombresA"
                android:inputType="textPersonName|textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etEmailA"
                android:hint="@string/etEmailA"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/etPasswordA"
                android:hint="@string/etPasswordA"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Confirmar Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/etCPasswordA"
                android:hint="@string/etCPasswordA"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Registrarse -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrarA"
            android:text="@string/btnRegistrarA"
            app:cornerRadius="8dp"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>